--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,6 @@
 <center>
   <div>
   <h1>NumeroHex Diaries</h1>
-  <center><img src="https://raw.githubusercontent.com/LWFlouisa/SkullFairyWasteland/main/assets/banner.png" width="75%" alt="A video platform for clinical vampires."></center>
+  <center><img src="https://raw.githubusercontent.com/LWFlouisa/NumeroHexDiaries/main/assets/banner.jpg" width="75%" alt="A video platform for clinical vampires."></center>
   </div>
 </center>
