--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 
 <center>
   <div>
-  <h1>NumeroHex Diaries</h1>
+  <h1>NumeroHex Diaries: My Life With A Girl From The Past</h1>
   <center><img src="https://raw.githubusercontent.com/LWFlouisa/NumeroHexDiaries/main/assets/banner.jpg" width="75%" alt="A video platform for clinical vampires."></center>
   </div>
 </center>
