--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,7 +1,7 @@
 {%- include      style.html -%}
 {%- include       head.html -%}
 {%- include     header.html -%}
-{℅- include     musico.html -℅}
+{℅ include     musico.html ℅}
 
 {{ content }}
 
