--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,11 @@
 {%- include       head.html -%}
 {%- include     header.html -%}
 
+<audio controls>
+  <source src="https://lwflouisa.github.io/Scores/fraponicmodeComplete3.mp3" type="audio/mp3">
+Your browser does not support the audio element.
+</audio> 
+
 {{ content }}
 
 {%- include javascript.html -%}
