--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,11 @@
 {%- include     header.html -%}
 {℅- include     musico.html -℅}
 
+<audio controls>
+  <source src="https://lwflouisa.github.io/Scores/fraponicmodeComplete3.mp3" type="audio/mp3">
+Your browser does not support the audio element.
+</audio> 
+
 {{ content }}
 
 {%- include javascript.html -%}
