--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,11 +2,7 @@
 {%- include       head.html -%}
 {%- include     header.html -%}
 
-<audio controls>
-  <source src="https://lwflouisa.github.io/Scores/fraponicmodeComplete3.mp3" type="audio/mp3">
-Your browser does not support the audio element.
-</audio> 
-
 {{ content }}
 
 {%- include javascript.html -%}
+{%- include     footer.html -%}
