--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,8 @@
 {%- include      style.html -%}
 {%- include       head.html -%}
 {%- include     header.html -%}
-{℅- include     musico.html -℅}
-
-<audio controls>
-  <source src="https://lwflouisa.github.io/Scores/fraponicmodeComplete3.mp3" type="audio/mp3">
-Your browser does not support the audio element.
-</audio> 
 
 {{ content }}
 
 {%- include javascript.html -%}
+{%- include     footer.html -%}
